--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ target-version = "py39"
 
 [tool.ruff.lint]
 select = ["ALL"]
+
+[tool.ruff.lint.per-file-ignores]
+"test/*" = ["ANN201","D101", "D102", "S101"]
